--- a/po/de.po
+++ b/po/de.po
@@ -9965,6 +9965,90 @@ msgstr "Picons überschreiben ?"
 msgid "Overwrite Bootlogo Files ?"
 msgstr "Bootlogos überschreiben ?"
 
+msgid "Update is reported as faulty !!"
+msgstr "Das Update wurde als fehlerhaft gemeldet !!"
+
+msgid "Caution update not tested yet !!"
+msgstr "Achtung, das Update wurde noch nicht getestet !!"
+
+msgid "Update at your own risk"
+msgstr "Update auf eigenes Risiko"
+
+msgid "For more information see http://www.hdfreaks.cc"
+msgstr "Mehr Informationen unter http://www.hdfreaks.cc"
+
+msgid "But you have activated \"Install unstable updates\""
+msgstr "Aber Sie haben \"Installiere unstabile Updates\" aktiviert"
+
+msgid "Update anyway?"
+msgstr "Trotzdem Updaten?"
+
+msgid "The status of the current update could not be checked because http://www.hdfreaks.cc could not be reached for some reason"
+msgstr "Der Status des aktuellen Updates kann nicht abgefragt werden, da www.hdfreaks.cc nicht erreichbar ist"
+
+#, python-format
+msgid ""
+"A configuration file (%s) has been modified since it was installed.\n"
+"Do you want to keep your modifications?"
+msgstr ""
+"Eine Konfigurationsdatei (%s) wurde nach der Installation verändert.\n"
+"Soll die geänderte Version erhalten bleiben?"
+
+#
+msgid ""
+"\n"
+"Manage extensions or plugins for your STB_BOX"
+msgstr ""
+"\n"
+"Verwalten der STB_BOX-Erweiterungen und -Plugins"
+
+#
+msgid ""
+"\n"
+"Online update of your STB_BOX software."
+msgstr ""
+"\n"
+"Online-Update der STB_BOX-Software."
+
+#
+msgid ""
+"\n"
+"Press OK on your remote control to continue."
+msgstr ""
+"\n"
+"Zum Fortfahren OK drücken."
+
+msgid ""
+"\n"
+"Restore your STB_BOX settings."
+msgstr ""
+"\n"
+"Wiederherstellen der STB_BOX-Einstellungen."
+
+#
+msgid ""
+"\n"
+"Restore your STB_BOX with a new firmware."
+msgstr ""
+"\n"
+"Wiederherstellen der STB_BOX mit einer neuen Firmware."
+
+#
+msgid ""
+"\n"
+"Restore your backups by date."
+msgstr ""
+"\n"
+"Wiederherstellen der nach Datum sortierten Sicherungen."
+
+#
+msgid ""
+"\n"
+"Scan for local extensions and install them."
+msgstr ""
+"\n"
+"Nach lokalen Erweiterungen suchen und diese installieren."
+
 #
 msgid "Select files/folders to backup..."
 msgstr "Dateien und Ordner auswählen..."
